<resources>
	<string name="app_name">BetterUntis</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="download_progress">%1$d.%2$s MB / %3$d.%4$s MB</string>
	<string name="not_now">Not now</string>
	<string name="nav_timetables">Timetables</string>
	<string name="personal_timetable">Personal Timetable</string>
	<string name="autoupdate_failed">Download failed.</string>
	<string name="autoupdate_failed_small">Please try again later.</string>
	<string name="autoupdate_try_again">Try again</string>
	<string name="autoupdate_manual_update">Manual update</string>
	<string name="timetable_no_time">00:00</string>
	<string name="timetable_no_hour_index">0</string>
	<string name="btn_manual_data_input">Manual data input</string>
	<string name="autoupdate_outdated">Your app-version is outdated!</string>
	<string name="btn_update">Update</string>
	<string name="autoupdate_downloading">Please wait while the latest version of the App is being downloaded…</string>
	<string name="field_url">Server URL</string>
	<string name="field_schoolname">School name</string>
	<string name="field_username">Username</string>
	<string name="field_key">Key</string>
	<string name="connecting">Connecting…</string>
	<string name="btn_scan_code">Scan QR Code</string>
	<string name="welcome">Welcome to BetterUntis!</string>
	<string name="please_log_in">Please log in to use this app:</string>
	<string name="btn_login">login</string>
	<string name="connected">Connection successful.</string>
	<string name="loading_data">Loading data…</string>
	<string name="data_loaded">Data loaded.</string>
	<string name="invalid_time_settings">Invalid date and/or time settings!</string>
	<string name="teachers">Teachers</string>
	<string name="classes">Classes</string>
	<string name="rooms">Rooms</string>
	<string name="jump_to_date">Jump to date</string>
	<string name="success">success</string>
	<string name="failed">failed</string>
	<string name="settings">Settings</string>
	<string name="contact">Contact</string>
	<string name="contact_email">betteruntis@sapuseven.com</string>
	<string name="credits">Made by SapuSeven</string>
	<string name="today">Today</string>
	<string name="pref_notifications">Notifications</string>
	<string name="pref_styling">App &amp; Timetable Customization</string>
	<string name="refresh">Re-render timetable</string>
	<string name="theme_default">Default</string>
	<string name="theme_untis">Original Untis-App</string>
	<string name="theme_blue">Blue</string>
	<string name="theme_green">Green</string>
	<string name="theme_pink">Pink</string>
	<string name="theme_cyan">Cyan</string>
	<string name="login">Login</string>
	<string name="preference_background_exam">Lessons with tests</string>
	<string name="preference_background_exam_past">Past lessons with tests</string>
	<string name="preference_background_free">Free days</string>
	<string name="preference_background_regular">Regular lessons</string>
	<string name="preference_background_regular_past">Past regular lessons</string>
	<string name="preference_timetable_colors_reset">Reset colors</string>
	<string name="preference_use_default_background">Use colors provided from your school</string>
	<string name="preference_use_default_background_desc">Some schools send their own background colors.</string>
	<string name="preference_use_theme_background">Use theme colors</string>
	<string name="preference_use_theme_background_desc">This only applies to regular lessons.</string>
	<string name="preference_dark_theme">Dark theme</string>
	<string name="title_new_features">New Features</string>
	<string name="preference_category_themes">Themes</string>
	<string name="preference_category_backgrounds">Item Colors</string>
	<string name="preference_theme">Select a theme</string>
	<string name="suggest_new_feature">Suggest new Feature</string>
	<string name="title">Title</string>
	<string name="description">Description</string>
	<string name="send">Send</string>
	<string name="minus">-</string>
	<string name="placeholder_numeric">0</string>
	<string name="plus">+</string>
	<string name="new_features_header">Planned new features</string>
	<string name="new_features_body">Use drag\'n\'drop to sort the proposals, putting them closer to the top the more you want this feature to be implemented!</string>
	<string name="toast_colors_reset">Color settings have been reset.</string>
	<string name="preference_marker">Time indicator</string>
	<string name="preference_background_irregular">Irregular lessons</string>
	<string name="preference_background_irregular_past">Past irregular lessons</string>
	<string name="preference_background_cancelled">Cancelled lessons</string>
	<string name="preference_background_cancelled_past">Past cancelled lessons</string>
	<string name="btn_like">Like Button</string>
	<string name="btn_dislike">Dislike button</string>
	<string name="preference_notifications_enable">Enable Notification</string>
	<string name="preference_notifications_enable_desc">Displays a notification with information about the next lesson while you have break.</string>
	<string name="subjects">Subjects</string>
	<string name="preference_notifications_visibility_hidden">Hidden</string>
	<string name="preference_notifications_visibility_short">Short name</string>
	<string name="preference_notifications_visibility_long">Long name</string>
	<string name="preference_notifications_group_visible_fields">Visible fields</string>
	<string name="preference_notifications_multiple">Enable in multiple-hour lesson</string>
	<string name="preference_notifications_multiple_desc">Notifications will be shown in breaks within multiple-hour lessons.</string>
	<string name="give_feedback">Give Feedback</string>
	<string name="notification_title">Break until %1$d:%2$d</string>
	<string name="notification_subjects">Next lesson: %1$s</string>
	<string name="notification_rooms">Room: %1$s</string>
	<string name="notification_teachers">Teacher: %1$s</string>
	<string name="changelog">ChangeLog</string>
	<string name="close">Close</string>
	<string name="pref_infos">About</string>
	<string name="app_version">App version</string>
	<string name="app_version_full">%1$s (%2$d)</string>
	<string name="preference_account_access_key">Access key</string>
	<string name="firebase_key">Firebase key</string>
	<string name="key_copied">Key copied to clipboard</string>
	<string name="toast_suggestion_submitted">Feature suggestion submitted.</string>
	<string name="toast_error_occurred">An error occurred.</string>
	<string name="toast_vote_counted">Your vote has been counted.</string>
	<string name="unknown_error">An unknown error occurred.</string>
	<string name="invalid_server_url">Invalid server URL!</string>
	<string name="server_webuntis_not_installed">The specified Server doesn\'t have WebUntis installed!</string>
	<string name="error_field_empty">This field cannot be empty!</string>
	<string name="invalid_school">The specified school doesn\'t exist!</string>
	<string name="invalid_credentials">Wrong username or key!</string>
	<string name="logout">Log out</string>
	<string name="preference_dark_theme_amoled">Use total black background</string>
	<string name="preference_dark_theme_amoled_desc">Useful for AMOLED screens.</string>
	<string name="preference_notifications_clear">Clear all notifications</string>
	<string name="new_feature_planned">A new feature is planned.</string>
	<string name="show">Show</string>
	<string name="title_class">Class %1$s</string>
	<string name="title_room">Room %1$s</string>
	<string name="hint_search_classes">Search for classes…</string>
	<string name="hint_search_teachers">Search for teachers…</string>
	<string name="hint_search_rooms">Search for rooms…</string>
	<string name="lesson_cancelled">%1$s (cancelled)</string>
	<string name="lesson_irregular">%1$s (irregular)</string>
	<string name="lesson_test">%1$s (exam!)</string>
	<string name="snackbar_error">Error: %1$s</string>
	<string name="snackbar_press_back_double">Press BACK twice to exit</string>
	<string name="title_free_rooms">Free Rooms</string>
	<string name="room_availability_indicator">Room availability indicator</string>
	<string name="hint_add_room">Add a room…</string>
	<string name="error">Error</string>
	<string name="ok">OK</string>
	<string name="room_desc_occupied">This Room is occupied.</string>
	<string name="delete_item">delete item</string>
	<string name="add">add</string>
	<string name="no_rooms_to_display">No rooms to display.\nTap + to add one!</string>
	<string name="room_expired">Room data expired</string>
	<string name="delete_item_title">Delete %1$s</string>
	<string name="delete_item_text">Are you sure you want to remove this room from the list?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="refresh_item_title">Refresh room data</string>
	<string name="refresh_item_text">The timetable for this room is from another week.\nThis may result in inaccurate predictions.</string>
	<string name="refresh_this_item">Refresh this room</string>
	<string name="refresh_all_items">Refresh all rooms</string>
	<string name="cancel">Cancel</string>
	<string name="preference_note_disable">(disable)</string>
	<string name="previous_hour">previous hour</string>
	<string name="next_hour">next hour</string>
	<string name="hour_index_current">This hour</string>
	<string name="preference_room_to_display_in_free_lessons">Room to display in free lessons</string>
	<string name="preference_room_to_display_in_free_lessons_trim">Only display in free lessons</string>
	<string name="preference_room_to_display_in_free_lessons_trim_desc">This will hide the indicator after the last lesson.</string>
	<plurals name="room_desc">
		<item quantity="one">This Room is free right now.</item>
		<item quantity="other">This Room is free for %d hours.</item>
	</plurals>
	<plurals name="hour_index_last">
		<item quantity="one">Last hour</item>
		<item quantity="other">%d hours ago</item>
	</plurals>
	<plurals name="hour_index_next">
		<item quantity="one">Next hour</item>
		<item quantity="other">In %d hours</item>
	</plurals>
	<string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"http://sapuseven.com\",\n  }\n}]</string>
	<string name="title_teacher">%1$s %2$s</string>
	<string name="error_invalid_url">Invalid URL!</string>
	<string name="title_donations">Donations</string>
	<string name="week_empty">No school this week :D</string>
	<string name="last_refreshed">Last refreshed: %1$s</string>
	<string name="pref_account">Account</string>
	<string name="pref_timetable">Timetable Item Design</string>
	<string name="never">never</string>
	<string name="preference_category_item_appearance">Item appearance</string>
	<string name="preference_timetable_item_padding">Item padding</string>
	<string name="preference_timetable_item_corner_radius">Item corner radius</string>
	<string name="preference_timetable_centered_lesson_info">Center lesson infos</string>
	<string name="preference_timetable_bold_lesson_name">Bold lesson name</string>
	<string name="preference_timetable_lesson_name_font_size">Font size for lesson name</string>
	<string name="preference_timetable_lesson_info_font_size">Font size for lesson infos</string>
	<string name="preference_category_lesson_text">Lesson text</string>
	<string name="preference_send_stats">Send anonymous usage stats</string>
	<string name="preference_send_stats_desc">Crash reports will always be sent.</string>
	<string name="preference_info_stats">About data collection</string>
	<string name="preference_info_stats_desc">Tap to view what data this app is collecting and sending to a server.</string>
	<string name="preference_category_coming_soon">Coming soon</string>
	<string name="save">Save</string>
</resources>