<!--suppress AndroidDomInspection -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="preference_notifications_enable"
		android:summary="@string/preference_notifications_enable_desc"
		android:title="@string/preference_notifications_enable"/>

	<CheckBoxPreference
		android:defaultValue="false"
		android:dependency="preference_notifications_enable"
		android:key="preference_notifications_in_multiple"
		android:summary="@string/preference_notifications_multiple_desc"
		android:title="@string/preference_notifications_multiple"/>

	<!--suppress AndroidUnknownAttribute -->
	<de.perflyst.untis.preference.UnitPreference
		unit="min"
		android:defaultValue="@integer/preference_notifications_minutes_before_first_lesson_default"
		android:title="@string/preference_notifications_minutes_before_first_lesson"
		android:numeric="integer"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:key="preference_notifications_minutes_before_first_lesson"/>

	<Preference
		android:key="preference_notifications_clear"
		android:title="@string/preference_notifications_clear"/>

	<CheckBoxPreference
		android:defaultValue="false"
		android:key="preference_notifications_do_not_disturb"
		android:summary="@string/preference_notifications_do_not_disturb_desc"
		android:title="@string/preference_notifications_do_not_disturb"/>

	<PreferenceCategory
		android:title="@string/preference_notifications_group_visible_fields">

		<ListPreference
			android:defaultValue="long"
			android:dependency="preference_notifications_enable"
			android:entries="@array/preference_notifications_visibility"
			android:entryValues="@array/preference_notifications_visibility_values"
			android:key="preference_notifications_visibility_subjects"
			android:summary="%s"
			android:title="@string/subjects"/>

		<ListPreference
			android:defaultValue="short"
			android:dependency="preference_notifications_enable"
			android:entries="@array/preference_notifications_visibility"
			android:entryValues="@array/preference_notifications_visibility_values"
			android:key="preference_notifications_visibility_rooms"
			android:summary="%s"
			android:title="@string/rooms"/>

		<ListPreference
			android:defaultValue="short"
			android:dependency="preference_notifications_enable"
			android:entries="@array/preference_notifications_visibility"
			android:entryValues="@array/preference_notifications_visibility_values"
			android:key="preference_notifications_visibility_teachers"
			android:summary="%s"
			android:title="@string/teachers"/>

	</PreferenceCategory>

</PreferenceScreen>
