<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

	<header
		android:fragment="com.sapuseven.untis.activity.ActivityPreferences$StylingFragment"
		android:icon="@drawable/ic_prefs_styling"
		android:title="@string/pref_styling"/>

	<header
		android:fragment="com.sapuseven.untis.activity.ActivityPreferences$NotificationsFragment"
		android:icon="@drawable/ic_prefs_notifications"
		android:title="@string/pref_notifications"/>

	<header
		android:fragment="com.sapuseven.untis.activity.ActivityPreferences$RoomFinderFragment"
		android:icon="@drawable/ic_prefs_roomfinder"
		android:title="@string/title_free_rooms"/>

	<header
		android:fragment="com.sapuseven.untis.activity.ActivityPreferences$InfosFragment"
		android:icon="@drawable/ic_prefs_info"
		android:title="@string/pref_infos"/>

</preference-headers>