<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<CheckBoxPreference
		android:defaultValue="@bool/preference_timetable_refresh_in_background_default"
		android:key="preference_timetable_refresh_in_background"
		android:summary="@string/preference_timetable_refresh_in_background_desc"
		android:title="@string/preference_timetable_refresh_in_background"/>

	<PreferenceCategory
		android:title="@string/preference_category_item_appearance">

		<!--suppress AndroidUnknownAttribute -->
		<com.perflyst.untis.preference.UnitPreference
			unit="dp"
			android:defaultValue="@integer/preference_timetable_item_padding_default"
			android:key="preference_timetable_item_padding"
			android:numeric="integer"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:title="@string/preference_timetable_item_padding"/>

		<!--suppress AndroidUnknownAttribute -->
		<com.perflyst.untis.preference.UnitPreference
			unit="dp"
			android:defaultValue="@integer/preference_timetable_item_corner_radius_default"
			android:key="preference_timetable_item_corner_radius"
			android:numeric="integer"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:title="@string/preference_timetable_item_corner_radius"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/preference_category_lesson_text">

		<CheckBoxPreference
			android:defaultValue="@bool/preference_timetable_centered_lesson_info_default"
			android:key="preference_timetable_centered_lesson_info"
			android:title="@string/preference_timetable_centered_lesson_info"/>

		<CheckBoxPreference
			android:defaultValue="@bool/preference_timetable_bold_lesson_name_default"
			android:key="preference_timetable_bold_lesson_name"
			android:title="@string/preference_timetable_bold_lesson_name"/>

		<!--suppress AndroidUnknownAttribute -->
		<com.perflyst.untis.preference.UnitPreference
			unit="sp"
			android:defaultValue="@integer/preference_timetable_lesson_name_font_size_default"
			android:key="preference_timetable_lesson_name_font_size"
			android:numeric="integer"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:title="@string/preference_timetable_lesson_name_font_size"/>

		<!--suppress AndroidUnknownAttribute -->
		<com.perflyst.untis.preference.UnitPreference
			unit="sp"
			android:defaultValue="@integer/preference_timetable_lesson_info_font_size_default"
			android:key="preference_timetable_lesson_info_font_size"
			android:numeric="integer"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:title="@string/preference_timetable_lesson_info_font_size"/>
	</PreferenceCategory>
</PreferenceScreen>