<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	tools:showIn="@layout/app_bar_login">

	<Button
		android:id="@+id/btnManualDataInput"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/btn_manual_data_input"/>

	<Button
		android:id="@+id/btnScanCode"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/btnManualDataInput"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:text="@string/btn_scan_code"/>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:gravity="center_horizontal"
		android:text="@string/welcome"
		android:textColor="@color/colorPrimary_text"
		android:textSize="36sp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView2"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="24dp"
		android:text="@string/please_log_in"/>

</RelativeLayout>