<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="center_vertical"
		android:orientation="vertical">

		<TextView
			android:id="@+id/textView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:layout_marginBottom="100dp"
			android:gravity="center"
			android:text="@string/autoupdate_outdated"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="?android:attr/textColorPrimary"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="end"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnUpdateLater"
			style="@style/Base.Widget.AppCompat.Button.Borderless"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/not_now"/>

		<Button
			android:id="@+id/btnUpdate"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_update"/>
	</LinearLayout>

</LinearLayout>

