<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animateLayoutChanges="true">

	<android.support.v7.widget.RecyclerView
		android:id="@+id/lvRoomList"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="48dp"/>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fabAddRoomWatcher"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_marginBottom="64dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		app:layout_anchor="@id/lvRoomList"
		app:layout_anchorGravity="bottom|right|end"
		app:layout_behavior="com.perflyst.untis.view.behavior.ScrollAwareFABBehavior"
		app:srcCompat="@drawable/ic_add"/>

	<TextView
		android:id="@+id/tvNoRooms"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center_horizontal"
		android:text="@string/no_rooms_to_display"
		android:visibility="gone"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_gravity="bottom"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<ImageButton
			android:id="@+id/btnPrevHour"
			android:layout_width="36dp"
			android:layout_height="36dp"
			android:layout_marginEnd="12dp"
			android:layout_marginLeft="18dp"
			android:layout_marginRight="12dp"
			android:layout_marginStart="18dp"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:contentDescription="@string/previous_hour"
			app:srcCompat="@drawable/ic_arrow_left"/>

		<TextView
			android:id="@+id/tvCurrentHour"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:clickable="true"
			android:focusable="true"
			android:gravity="center_horizontal"
			android:text=""/>

		<ImageButton
			android:id="@+id/btnNextHour"
			android:layout_width="36dp"
			android:layout_height="36dp"
			android:layout_marginEnd="18dp"
			android:layout_marginLeft="12dp"
			android:layout_marginRight="18dp"
			android:layout_marginStart="12dp"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:contentDescription="@string/next_hour"
			app:srcCompat="@drawable/ic_arrow_right"/>
	</LinearLayout>

</android.support.design.widget.CoordinatorLayout>